# mix-colors

./: Cargo.toml  flake.nix
assets/shaders/: paint_callback.wgsl
src/: index.html  main.rs  pigment.rs
src/assets/shaders/: paint_callback.glsl
