[package]
name = "mixcolor"
version = "0.1.0"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.15" }
bevy_egui = "0.31"
wgpu-types = "23.0.0"
mixbox = "2.0.0"